--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "svelte": "^3.9.1"
   },
   "devDependencies": {
-    "svelte-ts-preprocess": "^1.1.3",
-    "typescript": "^3.5.3",
     "parcel-bundler": "^1.12.3",
-    "parcel-plugin-svelte": "^4.0.2"
+    "parcel-plugin-svelte": "^4.0.2",
+    "svelte-preprocess": "^3.1.0",
+    "typescript": "^3.5.3"
   },
   "browserslist": [
     "last 1 chrome versions"
