--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "rm -rf dist && parcel build src/index.html"
   },
   "dependencies": {
-    "svelte": "^3.9.1"
+    "svelte": "^3.17.2"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-svelte": "^4.0.2",
-    "svelte-preprocess": "^3.1.0",
-    "typescript": "^3.5.3"
+    "node-sass": "^4.13.1",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-svelte": "^4.0.5",
+    "svelte-preprocess": "^3.3.0",
+    "typescript": "^3.7.5"
   },
   "browserslist": [
     "last 1 chrome versions"
